--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,5 +9,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.data.web.pageable.max-page-size=2000
+spring.data.web.pageable.default-page-size=2000
+
 server.port=8080
 api-bcb-serie=4505
