Adição do profile dev com DB MySQL

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>htmlunit</artifactId>
             <version>2.61.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.29</version>
+        </dependency>
     </dependencies>
 
     <build>
