--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
-spring.profiles.active=test
+#Propriedades do JPA
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
+
+#Propriedades do Pageable
+spring.data.web.pageable.max-page-size=2000
+spring.data.web.pageable.default-page-size=2000
+
+#Propriedades do server e serviço
+server.port=8080
+api-bcb-serie=4505
+
+#Profile atual
+spring.profiles.active=dev
