--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,13 @@ spring.jpa.open-in-view=true
 spring.data.web.pageable.max-page-size=2000
 spring.data.web.pageable.default-page-size=2000
 
+#Propriedade necessária para funcionar o Swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 #Propriedades do server e serviço
 server.port=8080
 api-bcb-serie=4505
 
 #Profile atual
 spring.profiles.active=dev
+
